第二次添加

--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -8,6 +8,7 @@
         android:id="@+id/user_image"
         android:layout_width="50sp"
         android:layout_height="50sp"
+        android:layout_marginLeft="8sp"
         android:background="@drawable/user_image"
         android:layout_gravity="center"/>
 
