--- a/app/src/main/res/drawable/user_image.xml
+++ b/app/src/main/res/drawable/user_image.xml
@@ -3,6 +3,7 @@
 <item >
     <shape >
         <corners android:radius="25dp"/>
+        <solid android:color="#3eb0d6"/>
     </shape>
 </item>
     <item android:state_pressed="true">
