--- a/app/src/main/res/layout/activity_zone.xml
+++ b/app/src/main/res/layout/activity_zone.xml
@@ -9,7 +9,7 @@
     <ScrollView
         android:id="@+id/word_show"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -33,74 +33,119 @@
                 android:gravity="center"
                 android:textColor="#ffffff"
                 android:textSize="40sp" />
+            <TextView
+                android:id="@+id/edit_word"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="我想说..."
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="20sp"
+                android:textSize="15sp"
+                android:textColor="#042d30"
+                />
+
 
             <TextView
                 android:id="@+id/name_show"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignRight="@+id/img"
                 android:layout_alignBottom="@+id/img"
-                android:textColor="#000000"
-                android:text="asdfasdfasdfadfasdfasd"/>
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="100sp"
+                android:layout_marginBottom="10sp"
+                android:text="yong"
+                android:textColor="#e9e5e5"
+                android:textSize="20sp" />
+
+
+            <TextView
+                android:id="@+id/user_image"
+                android:layout_width="80sp"
+                android:layout_height="80sp"
+                android:layout_alignBottom="@+id/img"
+                android:layout_alignParentEnd="true"
+                android:layout_marginBottom="-30dp"
+                android:layout_marginRight="20dp"
+                android:alpha="0.7"
+                android:background="@drawable/user_image"
+                android:gravity="center"
+                android:textColor="#816060"
+                android:textSize="55sp"
+                android:textStyle="italic" />
 
             <ListView
                 android:id="@+id/word_lv"
+                android:layout_marginTop="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/user_image" />
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/img" />
+                android:layout_below="@+id/word_lv"
+                android:text="没有更多内容"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                />
+        </RelativeLayout>
+    </ScrollView>
+    <!--发表朋友圈界面-->
+    <RelativeLayout
+        android:id="@+id/ly_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-            <RelativeLayout
-                android:id="@+id/lay_1"
+        <RelativeLayout
+            android:id="@+id/topPanel"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp">
+
+            <TextView
+                android:id="@+id/back1"
+                android:layout_width="20sp"
+                android:layout_height="30sp"
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="10sp"
+                android:background="@drawable/btn_back"
+                android:gravity="center"
+                android:textColor="#ffffff"
+                android:textSize="40sp" />
+
+            <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_below="@+id/word_lv">
-
-                <TextView
-                    android:id="@+id/back1"
-                    android:layout_width="20sp"
-                    android:layout_height="30sp"
-                    android:layout_marginLeft="10sp"
-                    android:layout_marginTop="10sp"
-                    android:background="@drawable/btn_back"
-                    android:gravity="center"
-                    android:textColor="#ffffff"
-                    android:textSize="40sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10sp"
-                    android:layout_marginTop="10sp"
-                    android:layout_toRightOf="@+id/back1"
-                    android:text="发表文字"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginLeft="10sp"
-                    android:layout_marginTop="10sp"
-                    android:text="发表"
-                    android:textColor="#1e9f24"
-                    android:textSize="25sp" />
-            </RelativeLayout>
-
-            <EditText
-                android:id="@+id/wenzi"
-                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/lay_1"
-                android:background="@drawable/login_edit"
-                android:gravity="start"
-                android:hint="这一刻的想法"
-                android:lines="80" />
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="10sp"
+                android:layout_toRightOf="@+id/back1"
+                android:text="发表文字"
+                android:textColor="#000000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/insert_word"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="10sp"
+                android:text="发表"
+                android:textColor="#1e9f24"
+                android:textSize="20sp" />
         </RelativeLayout>
 
+        <EditText
+            android:id="@+id/wenzi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/login_edit"
+            android:gravity="start"
+            android:layout_marginTop="30dp"
+            android:layout_below="@+id/topPanel"
+            android:hint="这一刻的想法... ..."
+            android:lines="8"
+            />
 
-    </ScrollView>
 
-
+    </RelativeLayout>
 </RelativeLayout>
